# magister

./: .gitignore  CMakeLists.txt  cmake_intel.sh
data_ops/: load_data.py
include/: activations.h  batch_norm2d.h  consts.h  conv2d.h  cross_entropy.h  data_loader.h  flatten.h  grad_tree.h  layer.h  linear.h  maxpool.h  model.h  models.h  offload_type.h  residual.h  rng.h  sequential.h  stats.h  tensor.h
lamp/include/: tensor.h
src/: activations.cpp  activations.h  batch_norm2d.cpp  conv2d.cpp  cross_entropy.cpp  data_loader.cpp  flatten.cpp  layer.cpp  linear.cpp  main.cpp  maxpool.cpp  model.cpp  residual.cpp  rng.cpp  sequential.cpp  stats.cpp  tensor.cpp
